run_988/OM_geometries/slurm-3922878.out
****************************************************************
*                      SLURM Batch System                      *
*           IN2P3 Computing Centre, Villeurbanne FR            *
****************************************************************
* Date:                 Tue Mar 19 09:42:01 CET 2024
* Job name:             stc.sh
* Job id:               3922878
* User:                 ikovalen
* Account:              nemo
* Submit host:          cca020
* Partition:            htc
* Quality of service:   normal
* Nodelist:             ccwslurm0086
****************************************************************
   ------------------------------------------------------------
  | Welcome to ROOT 6.16/00                  https://root.cern |
  |                               (c) 1995-2018, The ROOT Team |
  | Built for linuxx8664gcc on Jan 23 2019, 09:06:13           |
  | From tags/v6-16-00@v6-16-00                                |
  | Try '.help', '.demo', '.license', '.credits', '.quit'/'.q' |
   ------------------------------------------------------------


Processing /sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Tracks_Saving.cpp...
In file included from input_line_10:1:
/sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Tracks_Saving.cpp:140:29: error: use of undeclared identifier 'N_COLS'
                int NSOR1 = N_COLS * ((int)(Z_MAX - Z1) / 468) + (int)(Y1 - Y_MIN) / 833;
                            ^
/sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Tracks_Saving.cpp:141:29: error: use of undeclared identifier 'N_COLS'
                int NSOR2 = N_COLS * ((int)(Z_MAX - Z2) / 468) + (int)(Y2 - Y_MIN) / 833;
                            ^
/sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Tracks_Saving.cpp:143:50: error: use of undeclared identifier 'N_COLS'
                double Y_SOR1 = Y_MIN + (NSOR1 % N_COLS + 0.5) * 833;
                                                 ^
/sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Tracks_Saving.cpp:144:50: error: use of undeclared identifier 'N_COLS'
                double Z_SOR1 = Z_MAX - (NSOR1 / N_COLS + 0.5) * 468;
                                                 ^
/sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Tracks_Saving.cpp:146:50: error: use of undeclared identifier 'N_COLS'
                double Y_SOR2 = Y_MIN + (NSOR2 % N_COLS + 0.5) * 833;
                                                 ^
/sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Tracks_Saving.cpp:147:50: error: use of undeclared identifier 'N_COLS'
                double Z_SOR2 = Z_MAX - (NSOR2 / N_COLS + 0.5) * 468;
                                                 ^
   ------------------------------------------------------------
  | Welcome to ROOT 6.16/00                  https://root.cern |
  |                               (c) 1995-2018, The ROOT Team |
  | Built for linuxx8664gcc on Jan 23 2019, 09:06:13           |
  | From tags/v6-16-00@v6-16-00                                |
  | Try '.help', '.demo', '.license', '.credits', '.quit'/'.q' |
   ------------------------------------------------------------


Processing /sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Visualization.cpp...
Error in <TFile::TFile>: file ./all_data_2770mm/OMs_Tracks_Run-988.root does not exist
Error in <HandleInterpreterException>: Trying to dereference null pointer or trying to call routine taking non-null arguments.
Execution of your code was aborted.
In file included from input_line_10:1:
/sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Visualization.cpp:31:3: warning: null passed to a callee that requires a non-null argument [-Wnonnull]
                Tree[OM_num]->SetBranchAddress("A", &A_Tree[OM_num]);
                ^~~~~~~~~~~~
****************************************************************
*                      SLURM Batch System                      *
*           IN2P3 Computing Centre, Villeurbanne FR            *
****************************************************************
Date: Tue Mar 19 09:42:23 CET 2024
Job informations can be found using these commands:
Accounting:
sacct -j 3922878
Efficiency:
seff 3922878
****************************************************************
